<resources>
    <string name="app_name">Formula 1 Statistics</string>
    <string name="_1">1st place</string>
    <string name="team_avatars">team_avatars</string>
    <string name="mercedes">Mercedes</string>
    <string name="_100">100pts</string>
    <string name="title_topTeam">Constructor Standings</string>
    <string name="title_topRaces">Driver Standings</string>
    <string name="title_raceCalendar">Race Schedule</string>
    <string name="_2021_driver_standings">2021 Driver Standings</string>
    <string name="_2021_constructor_standings">2021 Constructor Standings</string>
    <string name="pos">POS</string>
    <string name="pts">PTS</string>
    <string name="team">TEAM</string>
    <string name="car">CAR</string>
    <string name="driver">DRIVER</string>
    <string name="background_top">background_top</string>
    <string name="error_data_not_found">Sorry! Something went wrong - we can not find this data in the system.</string>
</resources>