<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.jelezov.formula1.ui.topTeamFragment.FragmentTopTeam"
        android:label="@string/title_topTeam"
        tools:layout="@layout/fragment_top_rices" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ru.jelezov.formula1.ui.topRicersFragment.FragmentTopRacers"
        android:label="@string/title_topRaces"
        tools:layout="@layout/fragment_top_team" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.jelezov.formula1.ui.raceCalendar.FragmentRaceCalendar"
        android:label="@string/title_raceCalendar"
        tools:layout="@layout/fragment_race_calendar" />
</navigation>