<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

       <View
           android:id="@+id/title_drivers"
           android:layout_width="0dp"
           android:layout_height="40dp"
           android:layout_marginBottom="8dp"
           android:background="@color/red"
           app:layout_constraintBottom_toTopOf="@+id/pos"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <View
           android:id="@+id/view"
           android:layout_width="match_parent"
           android:layout_height="4dp"
           android:background="@color/black"
           app:layout_constraintBottom_toBottomOf="@+id/title_drivers"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent" />

       <ImageView
           android:id="@+id/imageView"
           android:layout_width="0dp"
           android:layout_height="0dp"
           android:rotationY="180"
           android:src="@drawable/formula_car_back"
           app:layout_constraintBottom_toBottomOf="@id/title_drivers"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="@+id/title_drivers"
           android:contentDescription="@string/background_top" />

       <TextView
           android:id="@+id/textView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/_2021_driver_standings"
           android:textColor="@color/white"
           android:textSize="18sp"
           android:textStyle="bold"
           android:layout_marginTop="5dp"
           android:shadowColor="@color/black"
           android:shadowDx="3"
           android:shadowDy="3"
           android:shadowRadius="2"
           android:fontFamily="@font/xolonium_bold"
           app:layout_constraintBottom_toBottomOf="@+id/imageView"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="@+id/title_drivers" />

       <TextView
           android:id="@+id/pos"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="7dp"
           android:layout_marginTop="12dp"
           android:fontFamily="@font/xolonium_bold"
           android:text="@string/pos"
           android:textSize="10sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title_drivers"
           android:layout_marginLeft="7dp"
           tools:ignore="SmallSp" />

       <TextView
           android:id="@+id/car"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="183dp"
           android:layout_marginTop="12dp"
           android:fontFamily="@font/xolonium_bold"
           android:text="@string/car"
           android:textSize="10sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title_drivers"
           android:layout_marginLeft="183dp"
           tools:ignore="SmallSp" />

       <TextView
           android:id="@+id/team"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="52dp"
           android:layout_marginTop="12dp"
           android:fontFamily="@font/xolonium_bold"
           android:text="@string/driver"
           android:textSize="10sp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title_drivers"
           android:layout_marginLeft="52dp"
           tools:ignore="SmallSp" />

       <TextView
           android:id="@+id/pts"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginEnd="23dp"
           android:text="@string/pts"
           android:textSize="10sp"
           android:layout_marginTop="12dp"
           android:fontFamily="@font/xolonium_bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/title_drivers"
           android:layout_marginRight="23dp"
           tools:ignore="SmallSp" />

       <ProgressBar
           android:id="@+id/progress_bar"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:indeterminateTint="@color/red"
           android:visibility="invisible"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="@+id/recycler_drivers"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/view"
           tools:visibility="visible"
           tools:targetApi="lollipop" />

       <TextView
           android:id="@+id/text_view_error"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:gravity="center_horizontal"
           android:visibility="invisible"
           android:layout_marginTop="5dp"
           android:textColor="@color/black"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/progress_bar"
           tools:text="@string/error_data_not_found"
           tools:visibility="visible" />

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recycler_drivers"
           android:layout_width="0dp"
           android:layout_height="0dp"
           android:layout_marginTop="5dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/pos"
           tools:listitem="@layout/item_driver" />

</androidx.constraintlayout.widget.ConstraintLayout>