<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:layout_marginStart="3dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="3dp"
    android:layout_marginBottom="3dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background_team"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_mercedes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <View
            android:id="@+id/logo_team"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/mercedes_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="15dp" />


        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="3dp"
            android:fontFamily="@font/formula1_regular"
            android:layout_marginEnd="15dp"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            android:text="@string/_1"
            android:textColor="@color/dark_white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="SmallSp"
            android:layout_marginRight="15dp" />

        <TextView
            android:id="@+id/team_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/formula1_regular"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            android:text="@string/mercedes"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/view_team"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp"
            android:layout_marginLeft="3dp" />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/formula1_regular"
            android:shadowColor="@color/black"
            android:layout_marginEnd="15dp"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            android:text="@string/_100"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/position"
            tools:ignore="SmallSp"
            android:layout_marginRight="15dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/view_team_back"
            android:layout_width="4dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:hardwareAccelerated="false"
            app:cardCornerRadius="1dp"
            app:cardElevation="5dp"
            app:layout_constraintStart_toEndOf="@+id/logo_team"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop"
            android:layout_marginLeft="8dp" />

        <View
            android:id="@+id/view_team"
            android:layout_width="4dp"
            android:layout_height="25dp"
            android:background="@color/merc_color"
            android:elevation="15dp"
            app:cardBackgroundColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/view_team_back"
            app:layout_constraintEnd_toEndOf="@+id/view_team_back"
            app:layout_constraintStart_toStartOf="@+id/view_team_back"
            app:layout_constraintTop_toTopOf="@+id/view_team_back"
            tools:targetApi="lollipop" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/car_team"
        android:layout_marginTop="35dp"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:background="@drawable/mercedes_car"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>