<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="135dp"
    android:layout_marginStart="3dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="3dp"
    android:layout_marginBottom="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background_team"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@drawable/bg_mercedes_car"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <View
            android:id="@+id/logo_team"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/mercedes_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="15dp" />


        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/formula1_regular"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            android:text="@string/_1"
            android:textColor="@color/dark_white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/points"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/driverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/formula1_regular"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            android:text="@string/mercedes"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/view_team"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp"
            android:layout_marginLeft="3dp" />

        <TextView
            android:id="@+id/driverFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/formula1_regular"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            android:text="@string/mercedes"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/driverName"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/formula1_regular"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            android:text="@string/_100"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/view_team_back"
            android:layout_width="4dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:hardwareAccelerated="false"
            app:cardCornerRadius="1dp"
            app:cardElevation="5dp"
            app:layout_constraintStart_toEndOf="@+id/logo_team"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop"
            android:layout_marginLeft="8dp" />

        <View
            android:id="@+id/view_team"
            android:layout_width="4dp"
            android:layout_height="25dp"
            android:background="@color/merc_color"
            android:elevation="15dp"
            app:cardBackgroundColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/view_team_back"
            app:layout_constraintEnd_toEndOf="@+id/view_team_back"
            app:layout_constraintStart_toStartOf="@+id/view_team_back"
            app:layout_constraintTop_toTopOf="@+id/view_team_back"
            tools:targetApi="lollipop" />

        <View
            android:id="@+id/driver_flag"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="2dp"
            android:alpha="0.3"
            android:background="@drawable/gb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="80dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/driver_photo"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/lewis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>